# atomicHabits

./: .env.sample  README.md  pyproject.toml
app_core/: celery.py  settings.py  urls.py
bots/: telegram_bot.py
bots/management/commands/: telegram.py
habit/: models.py  pagination.py  permissions.py  serializer.py  services.py  tasks.py  urls.py  validators.py  views.py
habit/tests/: __init__.py  base.py  test_habit.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
