[tool.poetry]
name = "atomichabits"
version = "0.1.0"
description = ""
authors = ["boshy <kaidohmary@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
